--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
 # Tadabase API Credentials
-TADABASE_API_KEY=your_api_key_here
-TADABASE_APP_ID=your_app_id_here
-TADABASE_APP_SECRET=your_app_secret_here
+TADABASE_API_KEY=
+TADABASE_APP_ID=
+TADABASE_APP_SECRET=
 
 # Table IDs
-BID_REQUEST_TABLE_ID=your_bid_request_table_id
-USERS_TABLE_ID=your_users_table_id
+BID_REQUEST_TABLE_ID=
+USERS_TABLE_ID=
+INJURY_CATEGORIES_TABLE_ID=
+BID_REQUEST_DETAILS_TABLE_ID=
+CLAIMS_TABLE_ID=
+PLAINTIFFS_TABLE_ID=
+
+# For Bid Request Statuses
+OPEN_STATUS_ID=
+
+# Port for local development
+PORT=3000
